[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/orb_circle.gd" type="Script" id=1]
[ext_resource path="res://framework/node_modules/audio_players/detachable_audio_player/DetachableAudioPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/orb_circle_01.wav" type="AudioStream" id=3]
[ext_resource path="res://game/orb_circle_02.wav" type="AudioStream" id=4]
[ext_resource path="res://game/orb_circle_03.wav" type="AudioStream" id=5]

[sub_resource type="Curve" id=1]
max_value = 1.5
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0401786, 1.5 ), 1.77361, 1.77361, 0, 0, Vector2( 0.504464, 1.15568 ), 0.0, 0.0, 0, 0, Vector2( 0.790178, 1.3875 ), 0.0, 0.0, 0, 0, Vector2( 0.986607, 0 ), 0.0, 0.0, 0, 0 ]

[node name="OrbCircle" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
width = 1.0
default_color = Color( 0.996078, 0.905882, 0.380392, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="DecayParticles" type="CPUParticles2D" parent="."]
modulate = Color( 0.996078, 0.905882, 0.380392, 1 )
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.5
emission_shape = 3
emission_points = PackedVector2Array(  )
emission_colors = PackedColorArray(  )
spread = 180.0
gravity = Vector2( 0, -4 )
initial_velocity = 10.0
initial_velocity_random = 0.75
angular_velocity = 800.0
angular_velocity_random = 1.0
damping = 10.0
scale_amount_curve = SubResource( 1 )

[node name="DecayParticlesExtra" type="CPUParticles2D" parent="."]
modulate = Color( 0.968627, 0.462745, 0.133333, 1 )
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.5
emission_shape = 3
emission_points = PackedVector2Array(  )
emission_colors = PackedColorArray(  )
spread = 180.0
gravity = Vector2( 0, -4 )
initial_velocity = 10.0
initial_velocity_random = 0.75
angular_velocity = 800.0
angular_velocity_random = 1.0
damping = 10.0
scale_amount_curve = SubResource( 1 )

[node name="SpawnSound" parent="." instance=ExtResource( 2 )]

[node name="RandomAudioPlayer" parent="SpawnSound" index="0"]
volume_db = -21.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SpawnSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 3 )
bus = "OrbCircle"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="SpawnSound/RandomAudioPlayer" index="1"]
stream = ExtResource( 4 )
bus = "OrbCircle"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="SpawnSound/RandomAudioPlayer" index="2"]
stream = ExtResource( 5 )
bus = "OrbCircle"

[editable path="SpawnSound"]
[editable path="SpawnSound/RandomAudioPlayer"]
